# voip-calls-downloader

./: .bandit.yml  .gitattributes  .github-topics.txt  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_METADATA.md  PUBLICATION_STEPS.md  QUICK_START.md  README.md  README_EN.md  SECURITY.md  pyrightconfig.json
.github/: dependabot.yml
rostelcom/: .gitignore  README.md  README_EN.md  call_records_watcher.py  cloudpbx_auth.py  config.yaml  env_example.txt  multi_account_downloader.py  pyproject.toml  requirements.txt  run_multi_watcher.sh  run_watcher.sh
rostelcom/tests/: __init__.py  test_auth.py  test_config.py  test_health.py  test_watcher.py
svyaztransit/: .env.example  .gitignore  README.md  README_EN.md  auto_restart.py  call_records_watcher.py  health_check.py  pyproject.toml  requirements.txt  run_watcher.sh  setup_cron.sh  stranzit_auth.py
