[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rostelcom-calls-downloader"
version = "0.1.0"
description = "Автоматический загрузчик записей звонков из CloudPBX Ростелеком"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Aleksandr Mordvinov", email = "info@scanovich.ai"}
]
keywords = ["cloudpbx", "rostelcom", "voip", "calls", "downloader", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests==2.32.5",
    "pydantic==2.10.3",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pyright>=1.1.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[project.scripts]
rostelcom-watcher = "call_records_watcher:main"
rostelcom-multi = "multi_account_downloader:main"

[tool.ruff]
# Inherit from parent .ruff.toml
extend = "../.ruff.toml"

[tool.ruff.lint]
# Per-file ignores for this project
per-file-ignores = {
    "__init__.py" = ["F401"],
    "tests/*" = ["PLR2004", "S101"],
}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
# Inherit from parent .bandit.yml
exclude_dirs = ["tests", "venv", ".venv"]

[tool.pyright]
# Inherit from parent pyrightconfig.json
include = ["."]
exclude = ["**/__pycache__", "**/venv", "**/.venv", "**/tests"]

